--- a/src/style.less
+++ b/src/style.less
@@ -8,8 +8,57 @@
  *
 */
 
-@myGrey: #dddddd;
+@myGrey: #f5f5f5;
 
 body {
+  background: white;
+}
+
+h3 {
+  margin-top: 120px;
+  text-align: center;
+}
+#startButton {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+#board {
+  display: none;
+  margin-top: 20px;
+  max-width: 1600px;
+  width: 100%;
+  height: 120px;
+  margin: 0 auto;
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 12px;
+  border: 1px solid #666;
   background-color: @myGrey;
+  position: relative;
+
+  li {
+    height: 100%;
+    margin: 0;padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    float: left;
+    text-align: center;
+    line-height: 100px;
+    color: white;
+    &:last-child {
+      position: absolute;
+      width: 40px;height: 100px;
+      right: -28px;top: 10px;
+      background: transparent;
+    }
+  }
+  .first {
+    background: hsl(0, 100%, 60%);
+  }
+}
+#submitButton {
+  display: none;
+  margin: 0 auto;
+  margin-top: 40px;
 }
