--- a/src/style.less
+++ b/src/style.less
@@ -9,26 +9,78 @@
 */
 
 @myGrey: #f5f5f5;
+@import 'https://fonts.googleapis.com/css?family=Black+Han+Sans';
+
+a:hover, a:link, a:visited, a:active {
+  color: black;
+  text-decoration: none;
+}
 
 body {
-  background: white;
+  background-image: url('./heaven.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
-h3 {
-  margin-top: 120px;
-  text-align: center;
+#title {
+  h3 {
+    text-align: center;
+    font-family: 'Black Han Sans', sans-serif;
+    font-weight: 400;
+    font-size: 90px;
+    line-height: 100px;
+    margin: 85px 0 0;
+    padding: 0;
+  }
+  h2 {
+    text-align: center;
+    font-family: 'Black Han Sans', sans-serif;
+    font-weight: 400;
+    font-size: 130px;
+    line-height: 140px;
+    padding: 0;
+    margin: 0;
+  }
+  h4 {
+    text-align: center;
+    font-family: 'Black Han Sans', sans-serif;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 80px;
+    margin: 120px 0 0;
+    padding: 0;
+  }
 }
-#startButton {
-  display: block;
+#buttonGroup {
+  width: 600px;
   margin: 0 auto;
-  margin-bottom: 40px;
+  div {
+    width: 120px;
+    height: 30px;
+    margin: 40px;
+    box-sizing: border-box;
+    float: left;
+    text-align: center;
+    line-height: 28px;
+    background-color: #f5f5f5;
+    border: 1px solid #666;
+    border-radius: 4px;
+  }
+  // #startButtonH {
+  // }
+  // #startButtonS {
+
+  // }
 }
+
 #board {
+  clear: both;
   display: none;
   margin-top: 20px;
   max-width: 1600px;
   width: 100%;
-  height: 120px;
+  height: 220px;
   margin: 0 auto;
   padding: 10px;
   box-sizing: border-box;
@@ -44,11 +96,11 @@ h3 {
     list-style: none;
     float: left;
     text-align: center;
-    line-height: 100px;
+    line-height: 200px;
     color: white;
     &:last-child {
       position: absolute;
-      width: 40px;height: 100px;
+      width: 40px;height: 200px;
       right: -28px;top: 10px;
       background: transparent;
     }
@@ -61,4 +113,50 @@ h3 {
   display: none;
   margin: 0 auto;
   margin-top: 40px;
+}
+
+#your {
+  clear: both;
+  width: 800px;
+  margin: 160px auto 0;
+  border: 10px solid black;
+  p {
+    background: white;
+    font-family: 'Black Han Sans', sans-serif;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 64px;
+    text-align: center;
+    margin: 0;
+    &:first-child {
+      width: 500px;
+      margin-top: -35px;
+      margin-left: 150px;
+    }
+    &:last-child {
+      width: 500px;
+      margin-left: 150px;
+      margin-bottom: -35px;
+    }
+  }
+  .class {
+    font-size: 100px;
+    line-height: 106px;
+  }
+}
+
+#sideYou {
+  display: none;
+  width: 800px;
+  margin: 50px auto 0;
+  border: 10px solid black;
+  overflow: visible;
+  .side {
+    background: white;
+    font-family: 'Black Han Sans', sans-serif;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 64px;
+    text-align: center;
+  }
 }
