--- a/src/style.less
+++ b/src/style.less
@@ -17,7 +17,6 @@ a:hover, a:link, a:visited, a:active {
 }
 
 body {
-  background-image: url('./heaven.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -30,7 +29,7 @@ body {
     font-weight: 400;
     font-size: 90px;
     line-height: 100px;
-    margin: 85px 0 0;
+    margin: 70px 0 0;
     padding: 0;
   }
   h2 {
@@ -62,19 +61,16 @@ body {
     box-sizing: border-box;
     float: left;
     text-align: center;
-    line-height: 28px;
+    line-height: 30px;
     background-color: #f5f5f5;
     border: 1px solid #666;
     border-radius: 4px;
+    cursor: pointer;
   }
-  // #startButtonH {
-  // }
-  // #startButtonS {
-
-  // }
 }
 
 #board {
+  position: relative;
   clear: both;
   display: none;
   margin-top: 20px;
@@ -87,9 +83,9 @@ body {
   border-radius: 12px;
   border: 1px solid #666;
   background-color: @myGrey;
-  position: relative;
 
   li {
+    font-size: 20px;
     height: 100%;
     margin: 0;padding: 0;
     box-sizing: border-box;
@@ -108,7 +104,39 @@ body {
   .first {
     background: hsl(0, 100%, 60%);
   }
+  #done {
+    font-family: 'Black Han Sans', sans-serif;
+    font-weight: 400;
+    font-size: 130px;
+    line-height: 200px;
+    text-align: center;
+    position: absolute;
+    top: 0;left: 0;
+  }
 }
+
+#win {
+  display: none;
+  margin-top: 20px;
+  max-width: 1600px;
+  width: 100%;
+  height: 220px;
+  margin: 0 auto;
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 12px;
+  border: 1px solid #666;
+  background-color: @myGrey;
+  position: absolute;
+  margin-top: -220px;
+
+  font-family: 'Black Han Sans', sans-serif;
+  font-weight: 400;
+  font-size: 130px;
+  line-height: 200px;
+  text-align: center;
+}
+
 #submitButton {
   display: none;
   margin: 0 auto;
@@ -117,7 +145,7 @@ body {
 
 #your {
   clear: both;
-  width: 800px;
+  width: 1000px;
   margin: 160px auto 0;
   border: 10px solid black;
   p {
@@ -129,13 +157,13 @@ body {
     text-align: center;
     margin: 0;
     &:first-child {
-      width: 500px;
+      width: 600px;
       margin-top: -35px;
-      margin-left: 150px;
+      margin-left: 200px;
     }
     &:last-child {
-      width: 500px;
-      margin-left: 150px;
+      width: 600px;
+      margin-left: 200px;
       margin-bottom: -35px;
     }
   }
@@ -143,11 +171,19 @@ body {
     font-size: 100px;
     line-height: 106px;
   }
+  #regame {
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 #sideYou {
   display: none;
-  width: 800px;
+  width: 1000px;
   margin: 50px auto 0;
   border: 10px solid black;
   overflow: visible;
