명도 색상이 있도록 수정 / 신 등극 후 보드 위치 오류 수정

--- a/src/style.less
+++ b/src/style.less
@@ -128,7 +128,9 @@ body {
   border: 1px solid #666;
   background-color: @myGrey;
   position: absolute;
+  left: 50%;
   margin-top: -220px;
+  margin-left: -800px;
 
   font-family: 'Black Han Sans', sans-serif;
   font-weight: 400;
